adds news section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 ---
-# this is an empty front matter
+title: Marcella Pereda - Stage Actor NYC
 ---
 
 
 <html>
 
-    <head>
-        <link href="css/hamburgers.css" rel="stylesheet" type="text/css" />
-        <link href="css/style.css" rel="stylesheet" type="text/css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Marcella Pereda - Stage Actor NYC</title>
-    </head>
+    {% include header.html %}
 
     <body>
 
