--- a/news.html
+++ b/news.html
@@ -1,15 +1,11 @@
 ---
-# this is an empty front matter
+title: Marcella Pereda - News
 ---
 
 
 <html>
 
-    <head>
-        <link href="{{ "/css/style.css" | relative_url }}" rel="stylesheet" type="text/css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    </head>
+    {% include header.html %}
 
     <body>
 
@@ -19,15 +15,20 @@
         <h1>News</h1>
     </div>
 
-    <div class="bio">
+    <div class="news">
         <div class="top">
-            <h1>About Marcella</h1>
-            <p class="first"><strong>Marcella Pereda</strong> is a west coast transplant who moved to the city two years ago. Having spent half her life in Los Angeles and the other half in Salt Lake City, she figured it was about time to move east. A martial artist, she grew up spending all of her free time training and competing in Kickboxing, Brazilian Jiu Jitsu and Krav Maga. So don't underestimate her 5'5 frame!</p>
-            <p>Her love of classical theatre began very young, due to an obsession with A Midsummer Night's Dream. The obsession never faded by the way, she's still desperate to play Puck one day! Her passion for acting developed in highschool, and she went on to receive her BFA from the University of Utah's Actor Training Program. Lately, Marcella has been lucky enough to spend her time on new works in the indie theatre scene. </p>
-            <p>New York Credits include: <strong>I'm Afraid of Death but Not of Dying</strong> (She NYC Arts Festival)  <strong>my parents are here tonight</strong> (Two Girls and A Boat), <strong>Love's Labour's Lost</strong> (Bad Quarto Productions). Regional Credits include: <strong>Much Ado About Nothing</strong> and <strong>A Few Good Men</strong> (Pioneer Memorial Theatre), <strong>The Skin of Our Teeth</strong> (The Grand Theatre), and <strong>Remington &amp; Weasel</strong> (PYGmalion Theatre Company).</p>
+            <h1>I'm Afraid of Death but Not of Dying
+            </h1>
+            <p>May 20, 2018</p>
+            <p class="first">A dark comedy about how we’re terrible at loving people when we’re terrified of losing them.</p>
+            <p>When hypochondriac Natalie falls in love with chronically ill Sam, she doesn’t know how to manage his Cystic Fibrosis. As their relationship begins to disintegrate amidst Sam’s new online relationship with another CF patient, Clara, the three of them struggle to reconcile issues of connection, fear, hope, and loneliness together.</p>
+            <p><a class="contact-action" target="_blank" href="https://www.brownpapertickets.com/event/3464577">Buy Tickets</a></p>
+            <div class="news-image">
+                <img src="{{ "/images/shenyc.png" | relative_url }}" style="height: 400px;" />
+            </div>
+
         </div>
     </div> 
-
     </body>
 </html>
 
